[build-system]
requires = ["setuptools", "wheel", "Cython", "pytest", "pytest-runner", "sphinx", "furo", "flake8", "scapy"]
build-backend = "setuptools.build_meta"

[project]
name = "py-gmp"
version = "0.0.1"
description = "Linux Multicast Routing."
readme = "README.md"
requires-python = ">=3.8"
authors = [ {name = "Jack Hart", email = "jackhart0508@gmail.com"} ]
maintainers = [ {name = "Jack Hart", email = "jackhart0508@gmail.com"} ]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Networking",
    "Topic :: System :: Operating System Kernels :: Linux"
    ]

license = {file = "./LICENSE"}

[project.optional-dependencies]
daemons = ["fastapi", "uvicorn"]

[project.urls]
Source = "https://github.com/jackhart/pygmp"
# Documentation = "TODO"

[options]
packages = ["pygmp"]

[tool.setuptools.package-data]
pygmp = ['log_config.ini']


[tool.pytest.ini_options]
pythonpath = "."
addopts = "-s"
testpaths = [
    "tests",
]

[tool.cibuildwheel]
archs = ["auto"]
test-skip = "true"

